Add documentation of general move function.

--- a/article/content/chess_logic.tex
+++ b/article/content/chess_logic.tex
@@ -16,7 +16,7 @@ Die eigentliche Business Logic befindet sich dabei im \texttt{src/}"=Verzeichnis
     \item \texttt{ECPSignalDetection}: Bestimmung eines Beacon"=Signales, auf welchem die Bewegung basiert (vgl. \autoref{sec:angle-determination}).
 \end{itemize}
 
-In den folgenden Abschnitten wird zunächst auf die allgemeine Struktur und anschließend auf die Zug"=Validierung eingegangen.
+Diese werden im folgenden Abschnitt genauer betrachtet. Anschließend wird die Zug"=Validierung erläutert.
 
 
 \subsection{Schachstrukturen}
@@ -67,10 +67,6 @@ Weiterhin erzeugt der \texttt{ECP"-Move"-ment}"=Konstruktor eine Instanz von \te
     \caption{Vereinfachter Code"=Ausschnitt zur \texttt{ECP"-Signal"-Detec"-tion}"=Klasse}
     \label{code:ecp-signal-detection}
 \end{listing}
-
-
-\subsection{Allgemeine \texttt{move}"=Funktion}
-\label{sec:general-move-function}
 
 
 \subsection{Zug"=Validierung}
