Add move validation section.

--- a/shared/bibliography.bib
+++ b/shared/bibliography.bib
@@ -3,7 +3,8 @@
   author = {{Bluetooth SIG, Inc}},
   date = {2019-01-21},
   url = {https://www.bluetooth.org/docman/handlers/downloaddoc.ashx?doc_id=457080},
-  langid = {american}
+  langid = {american},
+  version = {5.1}
 }
 
 @software{dezibotteamDezibotDezibot2025,
@@ -50,6 +51,17 @@
   author = {Fingerle, Chris-Dominik and Wilfer, Estelle Bianca},
   date = {2025-03-10},
   langid = {ngerman}
+}
+
+@standard{justUSChessFederations2019,
+  title = {{{US Chess Federation}}’s {{Official Rules}} of {{Chess}}},
+  namea = {Just, Tim},
+  nameatype = {collaborator},
+  date = {2019-07-19},
+  publisher = {The United States Chess Federation},
+  url = {https://www.uschess.org/docs/gov/chessrules/US_Chess_Rule_Book-Online_Only_Edition_v7.1-1.2.11-7.19.19.pdf},
+  urldate = {2025-03-12},
+  version = {7.1}
 }
 
 @online{matplotlibdevelopmentteamScaleInvariantAngle,
