--- a/article/main.tex
+++ b/article/main.tex
@@ -13,6 +13,7 @@
 
 \pagenumbering{arabic}
 \input{content/intro.tex}
+\input{content/usage.tex}
 \input{content/structure.tex}
 \input{content/chess_logic.tex}
 \input{content/movement.tex}
