Rename code file.

--- a/article/content/chess_logic.tex
+++ b/article/content/chess_logic.tex
@@ -91,7 +91,7 @@ Ein Springer darf sich wie folgt bewegen: entweder zwei Felder horizontal und ei
 Falls diese Formel erfüllt ist, gibt die Funktion \texttt{true} zurück; andernfalls \texttt{false}. Die gekürzte, konkrete Implementierung ist in \autoref{code:ecp-knight-is-move-valid} dargestellt.
 
 \begin{listing}[h]
-    \inputminted{cpp}{../assets/code/ECPKnight::isMoveValid.cpp}
+    \inputminted{cpp}{../assets/code/ECPKnight-isMoveValid.cpp}
     \caption{Gekürzte Implementierung der Springer"=Zug"=Validierung}
     \label{code:ecp-knight-is-move-valid}
 \end{listing}
