Add rotation position offset figure.

--- a/article/content/movement.tex
+++ b/article/content/movement.tex
@@ -14,6 +14,13 @@
 
 \subsubsection{Experimente}
 
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{../assets/dezibot_rotation_position_offset.pdf}
+    \caption{90°"=Rechts"=Bewegung des Dezibots. Links ist Ausgangs"-, rechts eine beispielhafte Endposition nach der Rotation abgebildet.}
+    \label{fig:dezibot-rotation-position-offset}
+\end{figure}
+
 
 \subsection{Iteration 2: Allgemeine Move"=Funktion}
 \label{sec:general-move-function}
