Update outline of presentation.

--- a/article/content/movement.tex
+++ b/article/content/movement.tex
@@ -17,7 +17,7 @@
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.4\textwidth]{../assets/dezibot_rotation_position_offset.pdf}
-    \caption{90°"=Rechts"=Bewegung des Dezibots. Links ist Ausgangs"-, rechts eine beispielhafte Endposition nach der Rotation abgebildet.}
+    \caption{90°"=Rechts"=Bewegung des Dezibots. Links ist Aus"-gangs-, rechts eine beispielhafte Endposition nach der Rotation abgebildet.}
     \label{fig:dezibot-rotation-position-offset}
 \end{figure}
 
