--- a/slides/content/content.tex
+++ b/slides/content/content.tex
@@ -5,7 +5,7 @@
 \end{frame}
 
 \input{content/intro.tex}
-\input{content/body.tex}
+\input{content/approach.tex}
 \input{content/future.tex}
 \input{content/demo.tex}
 \input{content/conclusion.tex}
