--- a/slides/content/intro.tex
+++ b/slides/content/intro.tex
@@ -2,9 +2,50 @@
 
 \section{Einführung}
 
-\begin{frame}{Einführung}
+\begin{frame}{Projektidee}
     \begin{itemize}
-        \item Projekt-Idee
-        \item Aufgabenstellung
+        \item Simulation einer Schachfigur durch Dezibot
+        \item Auswahl aus allen gängigen Schachfiguren
+        \item Angabe einer Zug"=Reihenfolge
+        \item Validierung des Zuges, Anzeige über LEDs
+        \item Ausführung durch Dezibot auf Schachbrett
+    \end{itemize}
+\end{frame}
+
+
+\begin{frame}{Projekt"=Rahmen}
+    \begin{itemize}
+        \item[$+$] Schwerpunkt auf \emph{einem} Dezibot\\
+            $\Rightarrow$ jeweils eine Figur auf dem Brett\\
+        
+        \item[$+$] Implementierung der Grundlagen\\
+        \begin{itemize}
+            \item Zug"=Validierung aller Schachfigurtypen
+            \item Bewegung auf Schachbrett
+        \end{itemize}
+    \end{itemize}
+
+    \pause
+    \begin{itemize}
+        \item[$-$] Schlagen, Bewegung von Brett, Ausweichen anderer Dezibots
+        \item[$-$] vollständige Schachbrett"=Logik
+        \item[$-$] Interaktion mit anderen Dezibots
+
+        \item[$-$] kontaktlose Verbindung zu Spielenden\\
+            $\Rightarrow$ vordefinierte Zug"=Reihenfolge
+
+        \item[$\Rightarrow$] Anschluss an andere Projekte möglich
+    \end{itemize}
+\end{frame}
+
+
+\begin{frame}{Verweis auf Dokumentation}
+    Weitere Inhalte der Projekt"=Dokumentation:
+
+    \begin{itemize}
+        \item Verwendung
+        \item Projektstruktur
+        \item Schachstrukturen \& "-logik
+        \item Bewegungsiterationen und weitere Ansätze
     \end{itemize}
 \end{frame}
