--- a/article/content/movement.tex
+++ b/article/content/movement.tex
@@ -6,7 +6,36 @@
 \subsection{Iteration 1: Vorwärts und 90°-Drehung}
 \label{sec:move-straight-turn}
 
+Die erste Iteration diente der grundlegenden Bewegung des Dezibots auf dem Schachfeld. Also dem geradeaus Laufen und dem Rotieren um 90°. Hierzu wurde zunächst mit den bereits in der Dezibot-Library liegenden Funktionen experimentiert und aus den Erkenntnissen daraus hauptsächlich eigene Funktionen in der \texttt{ECPMovement}"=Klasse erstellt. 
+
 \subsubsection{Farberkennung}
+\label{sec:color-detection}
+
+Damit der Dezibot sich eine bestimmte Anzahl an Feldern nach vorne bewegen kann, muss auf dem Schachbrett die Felder erkannt werden. Dies wurde mithilfe des RGBW"-Farbsensors auf der Unterseite des Dezibots angegangen. Dabei handelt es sich um einen \texttt{VEML6040}"=Farbsensor.
+
+Die Experimente mit den Funktion \texttt{Color"-Detection::""get"-Color"-Value} führten zu unsinnigen Werten. Die meisten RGBW-Werte waren identisch, auch als der Dezibot auf rotem, blauen, grünem oder weißem Untergrund stand. Bei anschließender Recherche wurde die \texttt{VEML6040}"=Library~\footnote{\url{https://github.com/thewknd/VEML6040}} entdeckt. Diese liefert nachvollziehbare Werte. Dies führte zu der Entscheidung die \texttt{dezibot.color"-Detection}"=Klasse durch die neu implementierte Klasse \texttt{dezibot.color"-Sensor} zu ersetzen. Diese Änderung wurde auch in durch die Pull"-Request \texttt{Fix color detection library.}~\footnote{\url{https://github.com/dezibot/dezibot/pull/2}} in das Dezibot"=Repository gemerged, damit die anderen Gruppen ebenfalls eine funktionierende Farberkennung nutzen können.
+
+Relevant für die Erkennung eines Feldes ist die Unterscheidung zwischen einem weißen (hellen) und einem schwarzen (dunklen) Untergrund. Dafür ist es notwendig die erhaltenen Farbwerte auf einer einheitlichen Skala zu normalisieren. In der Klasse \texttt{ECP"-Color"-Detection} wurden zudem die Methoden \texttt{is"-White"-Field} und später ein \texttt{turn"-On"-Color"-Correction"-Light} hinzugefügt, welche die notwendigen Operationen zusammenfassen. Probleme bestanden weiterhin durch die Abhängigkeit von dem Umgebungslicht. Die Idee bestand dadurch das normalisierte Umgebungslicht mit bei der Normalisierung zu berücksichtigen was zu der folgenden Formel zur Bestimmung eines Farbwertes, wobei $N_{C}$ der normalisierte Farbwert, $N_{A}$ das normalisierte Umgebungslicht, $M_{\texttt{RGBW}}$ der maximale Wert, der von dem Farbsensor wahrgenommen werden kann, und $M_{NC}$ der Maximale Farbwert nach der normalisierten Skala sind.
+
+\begin{equation*}
+    \begin{aligned}
+        N_{C} = \min\{C \cdot \frac{N_{A}}{M_{\texttt{RGBW}}} \cdot M_{NC}, M_{NC}\}
+    \end{aligned}
+\end{equation*}
+
+Für zuverlässigere Farbmessungen gerade bei schwachen Lichtverhältnissen wurde der Idee nachgegangen die LED auf der Unterseite des Dezibots anzuschalten um so möglichst gleichbleibendes Umgebungslicht bereitzustellen. Dies brachte deutliche Verbesserungen bei den Experimenten.
+
+Für die Unterscheidung zwischen hellem und dunklem Untergrund wurde die Helligkeit mit den normalisierten Farbwerten approximiert~\footnote{Algorithmus vorgeschlagen in \url{https://www.w3.org/TR/AERT/#color-contrast}}. Dazu wurde in der Methode \texttt{Color"-Sensor::""calculate"-Brightness} die Farbwerte jeweils mit einem Faktor verrechnet. Anhand der Helligkeit wurde mit einem festgelegtem Schwellwerts zwischen einem weißen und schwarzen Feld unterschieden. Zusammengefasst wurde die Operation in der Methode \texttt{ECP"-Color"-Detection::""is"-White"-Field} bei der \textt{false} zurückgegeben wurde wenn die Helligkeit unter dem Schwellwert liegt und \texttt{true} sonst. Die gekürzte, konkrete Implementierung ist in \autoref{code:is-white-field} dargestellt.
+
+ gegeben.
+
+\begin{listing}[h]
+    \inputminted{cpp}{../assets/code/ECPColorDetection.cpp}
+    \caption{Vereinfachter Code"=Ausschnitt zur \texttt{ECP"-Color"-Detection::""is"-White"-Field}"=Methode}
+    \label{code:is-white-field}
+\end{listing}
+
+Diese Lösung erfordert weitere Anpassungen im laufe des Projekts, da zunächst der Schwellwert kalibriert werden muss. Außerdem liegt der Farbsensor nicht in der Mitte des Dezibots, weshalb der hellste gemessene Farbwert und der dunkelste erreicht werden, wenn der Sensor in der Mitte eines Feldes ist und nicht wenn der gesamte Dezibot auf dem Feld steht.
 
 
 \subsubsection{Implementierung}
