--- a/article/content/usage.tex
+++ b/article/content/usage.tex
@@ -2,7 +2,7 @@
 
 \section{Verwendung}
 
-Im folgenden Abschnitt wird ein Beispiel erläutert, wie das Projekt verwendet werden kann, bei dem die meisten Funktionalitäten getestet werden können.
+Im folgenden Abschnitt wird ein Beispiel erläutert, bei dem die meisten Funktionalitäten des Projektes getestet werden können.
 
 % TODO: Schachfeldgröße überprüfen!
 Zunächst muss ein Schachbrett bereitgestellt werden, bei dem ein Feld jeweils \mbox{$6\times6$~cm} groß ist. Somit wird garantiert, dass sich die Dezibots komfortabel bewegen und rotieren können. Auf dem Dezibot $D$, welcher eine Schachfigur simulieren soll, muss das \texttt{example/""showcase/""embedded\_""chess\_""piece.ino} Programm $P_D$ installiert werden. Dort können die zu simulierende Figur, die auszuführenden Züge sowie weitere Kalibrierungsoptionen eingestellt werden.
@@ -20,7 +20,7 @@ Wie in \autoref{fig:usage} angedeutet ist, muss $B$ außerhalb des Schachbretts 
     \begin{subfigure}[c]{0.45\textwidth}
         \includegraphics[width=\textwidth]{../assets/dezibot_total_view_north.pdf}
     \end{subfigure}
-    \caption{Ausschnitt eines Schachbretts, auf zwei Dezibots ($D$) dargestellt sind, welche eine weiße bzw. schwarze Figur simulieren. Unten links ist ein dritter Dezibot dargestellt, welcher als Beacon ($B$) agiert. In orange sind die Ausrichtungen der jeweiligen Dezibots angedeutet, welche rechts mit einem physikalischen Dezibot verdeutlicht wird. Rechte Abbildung ist aus~\cite{dezibotteamDezibotDezibot2025} entnommen und annotiert.}
+    \caption{Ausschnitt eines Schachbretts, auf dem zwei Dezibots ($D$) dargestellt sind, welche eine weiße bzw. schwarze Figur simulieren. Unten links ist ein dritter Dezibot dargestellt, welcher als Beacon ($B$) agiert. In orange sind die Ausrichtungen der jeweiligen Dezibots angedeutet, welche rechts mit einem physikalischen Dezibot verdeutlicht wird. Rechte Abbildung ist aus~\cite{dezibotteamDezibotDezibot2025} entnommen und annotiert.}
     \label{fig:usage}
 \end{figure}
 
